[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/EnableDisableBuildMode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/07Enable Disable Building Mode AlternativeDisable Building Mode Alternative 1.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/07Enable Disable Building Mode AlternativeEnable Build Mode Alternative 1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/07Enable Disable Building Mode AlternativeEnable Building Mode Alternative 2.wav" type="AudioStream" id=4]

[node name="EnableDisableBuildMode" type="Node2D"]
script = ExtResource( 1 )

[node name="EnableBuildMode1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "BuildMode"

[node name="EnableBuildMode2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "BuildMode"

[node name="DisableBuildMode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "BuildMode"
